resolved issues on mobile

--- a/style.css
+++ b/style.css
@@ -205,6 +205,7 @@ nav a {
 
     .image-wrapper {
         display: flex;
+        flex-basis: 4rem;
         justify-content: center;
         margin-left: 5rem;
     }
@@ -215,6 +216,10 @@ nav a {
 
     #large-square {
         flex-basis: 40rem;
+    }
+
+    .square-title {
+        left: 10%;
     }
 
     footer {
